--- a/analytic_solution.ipynb
+++ b/analytic_solution.ipynb
@@ -51,11 +51,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.40964911  5.75562117 -3.08604976  2.97988644]\n",
-      " [ 0.59035089  1.55075102  4.0188137   2.71894873]]\n",
+      "[[ 0.40121007  3.66741652 -2.81481059  2.88952306]\n",
+      " [ 0.59878993  2.79220166  3.89290093  3.01896226]]\n",
       "----\n",
-      "[[0.12250049 0.08319029 0.00257814]\n",
-      " [0.12250049 0.05596236 0.00152697]]\n"
+      "[[0.11406898 0.08057818 0.00248424]\n",
+      " [0.11406898 0.06083524 0.00191129]]\n"
      ]
     }
    ],
@@ -147,43 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.92314996e-01 -5.65847508e+00  1.42371520e+00  2.34242118e-02\n",
-      "  -8.47684998e-02  1.29560714e-02]\n",
-      " [ 7.07685004e-01 -2.02277657e+00  1.65106915e-01 -2.23316010e-02\n",
-      "   3.38890713e-03  8.77220414e-02]]\n",
-      "-----\n",
-      "[[1.63157016e-01 7.28920778e-04 7.89128400e-05 1.43088063e-06\n",
-      "  2.90470678e-06]\n",
-      " [1.63157016e-01 1.04593319e-02 1.07892260e-03 2.46943010e-05\n",
-      "  3.49345995e-05]]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = pd.read_csv('data/milk.csv')\n",
-    "reg1 = data[['WW','FMO','INC','ESC','ESTQTY','DEL','COOLER','NUMSCHL']].dropna()\n",
-    "reg1['QSTOP'] = reg1['ESTQTY']/(reg1['DEL']*reg1['NUMSCHL'])\n",
-    "reg1 = sm.add_constant(reg1)\n",
-    "reg1[['WW','FMO','QSTOP','DEL']] = np.log(reg1[['WW','FMO','QSTOP','DEL']])\n",
-    "\n",
-    "est = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','DEL']]),2)\n",
-    "print est[0]\n",
-    "print '-----'\n",
-    "print est[1]\n",
-    "print"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,46 +208,106 @@
     "        f.write('\\\\textbf{sigma} & %s &  & & \\\\\\\\ \\\\\\\\ \\n'%(sigma) )\n",
     "    \n",
     "    f.write('\\end{tabular} \\n'+\n",
-    "            '\\end{center}\\n')\n",
-    "\n",
-    "write_table('out1.tex', ests)"
+    "            '\\end{center}\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_table('results/prelim_results.tex', est, labels=('WW',['const','FMO','QSTOP','DEL']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.00000000e+00 -2.76235511e+00  4.13934513e-01 -1.32301552e-02\n",
-      "  -1.74214796e-04  9.79755345e-02]]\n",
+      "Index([u'VENDOR', u'WW', u'WC', u'LFW', u'LFC', u'WIN', u'SYSTEM', u'YEAR',\n",
+      "       u'MONTH', u'DAY', u'FMOZONE', u'ESC', u'COOLER', u'QLFC', u'QLFW',\n",
+      "       u'QWW', u'QWC', u'ESTQTY', u'DEL', u'MILES', u'NUMSCHL', u'NUMWIN',\n",
+      "       u'POPUL', u'ADJPOP', u'NUM', u'GAS', u'FMO', u'INC'],\n",
+      "      dtype='object')\n",
+      "[[ 1.         -2.77182124  0.37705223 -0.00924615  0.01991756  0.02771931\n",
+      "   0.09680586]]\n",
       "-----\n",
-      "[[0.00000000e+00 9.78463856e-03 1.01459100e-03 2.23149535e-05\n",
-      "  3.37867128e-05]]\n",
+      "[[0.00000000e+00 8.81008050e-03 1.02472421e-03 2.00231697e-05\n",
+      "  3.27081971e-05 1.38615563e-05]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('data/milk.csv')\n",
+    "\n",
+    "print data.columns\n",
+    "reg1 = data[['WW','FMO','INC','ESC','ESTQTY','DEL','COOLER','NUMSCHL','NUM', 'GAS']].dropna()\n",
+    "reg1['QSTOP'] = reg1['ESTQTY']/(reg1['DEL']*reg1['NUMSCHL'])\n",
+    "reg1['NOSTOP'] = (reg1['DEL']*reg1['NUMSCHL'])\n",
+    "reg1 = sm.add_constant(reg1)\n",
+    "reg1[['WW','FMO','GAS','QSTOP','NOSTOP','ESTQTY']] = np.log(reg1[['WW','FMO','GAS','QSTOP','NOSTOP','ESTQTY']])\n",
+    "\n",
+    "\n",
+    "est1 = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','GAS','COOLER']]),1)\n",
+    "print est1[0]\n",
+    "print '-----'\n",
+    "print est1[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in divide\n"
+     ]
+    }
+   ],
+   "source": [
+    "write_table('results/ols_results.tex', est1, labels=('WW',['const','FMO','QSTOP','GAS','COOLER']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.30445 -5.88167  1.33509  0.05489  0.01233  0.02562  0.0115 ]\n",
+      " [ 0.69555 -2.12756  0.18086 -0.02193  0.01599  0.03172  0.08724]]\n",
+      "-----\n",
+      "[[1.548e-01 6.300e-04 7.000e-05 0.000e+00 0.000e+00 0.000e+00]\n",
+      " [1.548e-01 9.170e-03 1.100e-03 2.000e-05 4.000e-05 2.000e-05]]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "est1 = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','DEL']]),1)\n",
-    "print est1[0]\n",
+    "est = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','GAS','COOLER']]),2)\n",
+    "print np.round(est[0],5)\n",
     "print '-----'\n",
-    "print est1[1]\n",
-    "print\n",
-    "write_table('results/ols_results.tex', est, labels=('WW',['const','FMO','QSTOP','DEL']))"
+    "print np.round(est[1],5)\n",
+    "print"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_table('results/prelim_results.tex', est, labels=('WW',['const','FMO','QSTOP','GAS','COOLER']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
