--- a/analytic_solution.ipynb
+++ b/analytic_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.40121007  3.66741652 -2.81481059  2.88952306]\n",
-      " [ 0.59878993  2.79220166  3.89290093  3.01896226]]\n",
+      "[[ 0.40834407  4.95851671 -2.96775682  4.93672455]\n",
+      " [ 0.59165593  2.16862955  3.97785684  3.8226674 ]]\n",
       "----\n",
-      "[[0.11406898 0.08057818 0.00248424]\n",
-      " [0.11406898 0.06083524 0.00191129]]\n"
+      "[[0.13867572 0.47803449 0.08316292]\n",
+      " [0.13867572 0.33485057 0.05701418]]\n",
+      "0.9505382106788326\n"
      ]
     }
    ],
@@ -86,11 +87,11 @@
     "    comp_order = stats.rankdata(weights.mean(axis=0),method='ordinal')\n",
     "    lamb_ses = lamb_ses[comp_order-1]\n",
     "    \n",
-    "    \n",
     "    for i in comp_order:\n",
     "        try:\n",
     "            #component estimates\n",
     "            w = weights[:,i-1]\n",
+    "            \n",
     "            lamb = lambs[i-1]\n",
     "            lamb_se = lamb_ses[i-1]\n",
     "\n",
@@ -101,15 +102,15 @@
     "\n",
     "            #sigma\n",
     "            mu = np.tile(beta, nobs).reshape(nobs, k)*x\n",
-    "            weighted_err = w*(y - mu.sum(axis=1))\n",
-    "            sigma =  weighted_err.std()\n",
+    "            weighted_err = w*(y - mu.sum(axis=1))**2\n",
+    "            sigma =  (weighted_err.sum()/w.sum())**.5\n",
     "\n",
     "            #add component\n",
     "            comp_param =np.concatenate(([lamb],beta,[sigma]))\n",
     "            params.append(comp_param)\n",
     "\n",
     "            #beta_se\n",
-    "            beta_se = np.diagonal(xx_mat*sigma**2)\n",
+    "            beta_se = (np.diagonal(xx_mat*sigma**2))**.5\n",
     "            comp_se = np.concatenate(([lamb_se],beta_se))\n",
     "            se.append(comp_se)\n",
     "\n",
@@ -120,11 +121,11 @@
     "            params.append(np.concatenate( (np.zeros(k+1),[1]) ))\n",
     "            se.append( np.zeros(k+1) )\n",
     "    \n",
-    "    return np.array(params), np.array(se), 1-err.var()/y.var()\n",
+    "    return np.array(params), np.array(se), 1-err.mean()/y.var()\n",
     "\n",
     "\n",
     "def gen_weights(nobs,ncomp):\n",
-    "    weights = np.random.uniform(size=(nobs,ncomp))\n",
+    "    weights = np.abs(np.random.gumbel(size=(nobs,ncomp)))\n",
     "    denom = np.repeat(weights.sum(axis= 1),ncomp).reshape(nobs,ncomp)\n",
     "    return (weights/denom)\n",
     "\n",
@@ -132,22 +133,22 @@
     "def estimate(y,x,ncomp):\n",
     "    e = gen_weights(len(x),ncomp)\n",
     "    m = None\n",
-    "    for i in range(15):\n",
+    "    for i in range(50):\n",
     "        m,se,r2 = m_step(y,x,e)\n",
     "        e = e_step(y,x,m)\n",
     "    return m, se, r2, y, x, ncomp\n",
     "\n",
-    "ests  = estimate(Y,sm.add_constant(X),2)\n",
     "m, se, r2, y, x, ncomp = estimate(Y,sm.add_constant(X),2)\n",
     "\n",
     "print m\n",
     "print '----'\n",
-    "print se"
+    "print se\n",
+    "print r2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,11 +183,12 @@
     "        f.write('\\\\textbf{Regime %s} & \\\\textbf{est} & \\\\textbf{std err} &'%(1+comp)+ \n",
     "                '\\\\textbf{t} & \\\\textbf{P $>$ $|$ t $|$} \\\\\\\\ \\n')\n",
     "        f.write('\\\\bottomrule \\\\\\\\ \\n')\n",
-    "        #isolate parasm\n",
+    "        \n",
+    "        #isolate params\n",
     "        comp_params = params[comp]\n",
     "        comp_se = se[comp]\n",
-    "        comp_t = np.abs(comp_params[:-1]/comp_se)\n",
-    "        comp_p = 1 - stats.t.cdf(comp_t,df=nobs)\n",
+    "        comp_t = comp_params[:-1]/comp_se\n",
+    "        comp_p = 1 - stats.t.cdf(np.abs(comp_t),df=(nobs-k)) + stats.t.cdf(-np.abs(comp_t),df=(nobs-k))\n",
     "        \n",
     "        #round everything\n",
     "        comp_params = np.round(comp_params,5)\n",
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +230,14 @@
       "[[ 1.         -2.77182124  0.37705223 -0.00924615  0.01991756  0.02771931\n",
       "   0.09680586]]\n",
       "-----\n",
-      "[[0.00000000e+00 8.81008050e-03 1.02472421e-03 2.00231697e-05\n",
-      "  3.27081971e-05 1.38615563e-05]]\n"
+      "[[0.         0.09386203 0.03201131 0.00447473 0.00571911 0.00372311]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:36: RuntimeWarning: divide by zero encountered in divide\n"
      ]
     }
    ],
@@ -247,41 +255,72 @@
     "est1 = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','GAS','COOLER']]),1)\n",
     "print est1[0]\n",
     "print '-----'\n",
-    "print est1[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: divide by zero encountered in divide\n"
-     ]
-    }
-   ],
-   "source": [
+    "print est1[1]\n",
+    "\n",
     "write_table('results/ols_results.tex', est1, labels=('WW',['const','FMO','QSTOP','GAS','COOLER']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.30445 -5.88167  1.33509  0.05489  0.01233  0.02562  0.0115 ]\n",
-      " [ 0.69555 -2.12756  0.18086 -0.02193  0.01599  0.03172  0.08724]]\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                     WW   R-squared:                       0.083\n",
+      "Model:                            OLS   Adj. R-squared:                  0.081\n",
+      "Method:                 Least Squares   F-statistic:                     62.27\n",
+      "Date:                Sat, 04 May 2019   Prob (F-statistic):           1.90e-50\n",
+      "Time:                        19:01:29   Log-Likelihood:                 2533.0\n",
+      "No. Observations:                2765   AIC:                            -5056.\n",
+      "Df Residuals:                    2760   BIC:                            -5026.\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -2.7718      0.094    -29.504      0.000      -2.956      -2.588\n",
+      "FMO            0.3771      0.032     11.768      0.000       0.314       0.440\n",
+      "QSTOP         -0.0092      0.004     -2.064      0.039      -0.018      -0.000\n",
+      "GAS            0.0199      0.006      3.479      0.001       0.009       0.031\n",
+      "COOLER         0.0277      0.004      7.438      0.000       0.020       0.035\n",
+      "==============================================================================\n",
+      "Omnibus:                     1723.630   Durbin-Watson:                   1.240\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           244355.288\n",
+      "Skew:                           1.969   Prob(JB):                         0.00\n",
+      "Kurtosis:                      48.886   Cond. No.                         554.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = sm.OLS(reg1['WW'],reg1[['const','FMO','QSTOP','GAS','COOLER']])\n",
+    "print test.fit().summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.79070e-01 -3.51583e+00  6.35620e-01 -1.19400e-02  3.76800e-02\n",
+      "   5.24500e-02  1.24800e-01]\n",
+      " [ 5.20930e-01 -1.59705e+00 -4.98200e-02 -2.23000e-03 -4.12000e-03\n",
+      "  -2.86000e-03  4.00500e-02]]\n",
       "-----\n",
-      "[[1.548e-01 6.300e-04 7.000e-05 0.000e+00 0.000e+00 0.000e+00]\n",
-      " [1.548e-01 9.170e-03 1.100e-03 2.000e-05 4.000e-05 2.000e-05]]\n",
-      "\n"
+      "[[0.13193 0.16046 0.0537  0.00842 0.01107 0.00705]\n",
+      " [0.13193 0.05994 0.02082 0.00254 0.00319 0.00212]]\n"
      ]
     }
    ],
@@ -289,13 +328,12 @@
     "est = estimate(np.array(reg1['WW']),np.array(reg1[['const','FMO','QSTOP','GAS','COOLER']]),2)\n",
     "print np.round(est[0],5)\n",
     "print '-----'\n",
-    "print np.round(est[1],5)\n",
-    "print"
+    "print np.round(est[1],5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
