--- a/mixture.ipynb
+++ b/mixture.ipynb
@@ -81,7 +81,7 @@
     "dens = sm.nonparametric.KDEUnivariate(lbids)\n",
     "dens.fit()\n",
     "\n",
-    "plt.plot(dens.support, dens.density, label='KDE')\n",
+    "#plt.plot(dens.support, dens.density, label='KDE')\n",
     "plt.hist(lbids,20,density=True)\n",
     "plt.xlabel('log(Bids)')\n",
     "plt.ylabel('Density')\n",
