--- a/analytic_solution.ipynb
+++ b/analytic_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
     "    f.write('\\n\\\\begin{tabular}{lcccc} \\n')\n",
     "    for comp in range(ncomp):\n",
     "        f.write('\\\\hline \\n')\n",
-    "        f.write('\\\\textbf{History %s} & \\\\textbf{Est.} & \\\\textbf{Std. Err.} &'%(1+comp)+ \n",
+    "        f.write('\\\\textbf{Phase %s} & \\\\textbf{Est.} & \\\\textbf{Std. Err.} &'%(1+comp)+ \n",
     "                '\\\\textbf{t} & \\\\textbf{P $>$ $|$ t $|$} \\\\\\\\ \\n')\n",
     "        f.write('\\\\hline \\\\\\\\ \\n')\n",
     "        \n",
@@ -174,20 +174,20 @@
     "        comp_t = np.round(comp_t,5)\n",
     "        comp_p = np.round(comp_p,5)\n",
     "        \n",
-    "        lamb = comp_params[0]\n",
-    "        #lamb_se, lamb_t, lamb_p = comp_params[0], comp_se[0], comp_t[0], comp_p[0]\n",
+    "        lamb, lamb_se = comp_params[0], comp_se[0]\n",
+    "        #lamb_t, lamb_p = comp_params[0],  comp_t[0], comp_p[0]\n",
     "        beta, beta_se, beta_t, beta_p = comp_params[1:-1], comp_se[1:], comp_t[1:], comp_p[1:]\n",
     "        sigma = comp_params[-1]\n",
     "        \n",
     "        if ncomp > 1:\n",
-    "            f.write('\\\\textbf{Pr(hist. %s)} & %s  & & & \\\\\\\\ \\\\\\\\ \\n'%(comp+1, lamb) )\n",
+    "            f.write('\\\\textbf{Pr(phase %s)} & %s  & %s & & \\\\\\\\ \\\\\\\\ \\n'%(comp+1, lamb, lamb_se) )\n",
     "        \n",
     "        for i in range(k):\n",
     "            f.write('\\\\textbf{%s} & %s & (%s) & %s & %s \\\\\\\\ \\\\\\\\ \\n'%(xlabel[i],beta[i],beta_se[i],\n",
     "                                                                             beta_t[i],beta_p[i]) )\n",
     "        \n",
-    "        f.write('\\\\textbf{Variance} & %s &  & & \\\\\\\\ \\\\\\\\ \\n'%(sigma) )\n",
-    "    \n",
+    "        #f.write('\\\\textbf{Variance} & %s &  & & \\\\\\\\ \\\\\\\\ \\n'%(sigma) )\n",
+    "    f.write('\\\\hline \\\\\\\\ \\n')    \n",
     "    f.write('\\end{tabular} \\n')\n",
     "    f.close()\n",
     "    \n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -208,9 +208,9 @@
      "text": [
       "Index([u'Unnamed: 0', u'YEAR', u'MONTH', u'DAY', u'SYSTEM', u'FMOZONE',\n",
       "       u'VENDOR', u'COUNTY', u'LWW', u'LFMO', u'LGAS', u'LPOPUL', u'LQWW',\n",
-      "       u'LMEALS', u'COOLER', u'ESC', u'1A', u'3', u'6', u'7', u'9', u'INC',\n",
-      "       u'LWW_min1', u'LWW_min2', u'LWW_min3', u'LWW_min4', u'LWW_max1',\n",
-      "       u'LWW_max2', u'LWW_max3', u'LWW_max4'],\n",
+      "       u'COOLER', u'ESC', u'3', u'6', u'7', u'9', u'INC', u'LWW_min1',\n",
+      "       u'LWW_min2', u'LWW_min3', u'LWW_min4', u'LWW_max1', u'LWW_max2',\n",
+      "       u'LWW_max3', u'LWW_max4'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -222,9 +222,11 @@
     "#variables names\n",
     "lmilk = ['LWW']\n",
     "auct_key = ['YEAR','MONTH','DAY','SYSTEM','FMOZONE']\n",
-    "lcts = ['LFMO','LGAS','LPOPUL','LQWW','LMEALS']\n",
+    "lcts = ['LFMO','LGAS','LPOPUL','LQWW']#,'LMEALS']\n",
     "dummies = ['COOLER','ESC']\n",
-    "fekeys = ['1A', '3', '6', '7', '9']\n",
+    "\n",
+    "fekeys = list(reg1.columns[15:-9])\n",
+    "\n",
     "\n",
     "lags = 4\n",
     "lagkeys = [l+str(i) for l in ['LWW_min','LWW_max'] for i in range(1,1+lags)]\n",
@@ -236,21 +238,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "nice_ww = 'Bids (log-log)'\n",
     "nice_cov = ['(Intercept)', 'Raw milk', 'Gas',\n",
-    "            'Population', 'Quantity', 'Meals', 'Cooler', 'Escalated', \n",
-    "            'Zone 1A', 'Zone 3','Zone 6', 'Zone 7', 'Zone 9']\n",
+    "            'Population', 'Quantity', #'Meals',\n",
+    "            'Cooler', 'Escalated', #+ fekeys\n",
+    "            'Waco','St. Angelo', 'Austin', 'San Antonio']\n",
     "nice_lags = [l+str(i) for l in ['Min. lag \\#','Max. lag \\#'] for i in range(1,1+lags)]\n",
-    "nice_lags = ['Incumbency'] + nice_lags"
+    "nice_lags = ['Incumbency'] + nice_lags\n",
+    "\n",
+    "print len(nice_cov)\n",
+    "print len(covariates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -260,28 +275,26 @@
       "\\small \n",
       "\\begin{tabular}{lclc} \n",
       "\\hline \n",
-      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.185 \\\\ \n",
-      "\\textbf{No. Observations:} & 3662 & \\textbf{ AIC:} & -8112.3 \\\\ \n",
+      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.158 \\\\ \n",
+      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8399.7 \\\\ \n",
       "\\end{tabular} \n",
       "\n",
       "\\begin{tabular}{lcccc} \n",
       "\\hline \n",
-      "\\textbf{History 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
+      "\\textbf{Phase 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{(Intercept)} & -2.26985 & (0.07203) & -31.51394 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.21025 & (0.02618) & 8.03006 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 0.00915 & (0.00409) & 2.23351 & 0.02558 \\\\ \\\\ \n",
-      "\\textbf{Population} & 0.02548 & (0.00315) & 8.0969 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & -0.00017 & (0.00204) & -0.08106 & 0.9354 \\\\ \\\\ \n",
-      "\\textbf{Meals} & -0.02267 & (0.00307) & -7.39402 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.01783 & (0.00296) & 6.02454 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.01983 & (0.0028) & -7.09227 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 1A} & -0.02461 & (0.01894) & -1.29922 & 0.19395 \\\\ \\\\ \n",
-      "\\textbf{Zone 3} & -0.06472 & (0.00421) & -15.38869 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 6} & -0.05254 & (0.00803) & -6.54106 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 7} & -0.11161 & (0.01758) & -6.35002 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 9} & -0.03339 & (0.00447) & -7.46668 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Variance} & 0.07965 &  & & \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -2.32583 & (0.07014) & -33.15816 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.18546 & (0.02613) & 7.09658 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 0.01672 & (0.00401) & 4.16971 & 3e-05 \\\\ \\\\ \n",
+      "\\textbf{Population} & 0.00709 & (0.00184) & 3.84354 & 0.00012 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & -0.00354 & (0.002) & -1.77142 & 0.07657 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.01847 & (0.00292) & 6.32972 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.0229 & (0.00274) & -8.34616 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.06712 & (0.00412) & -16.30108 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.05418 & (0.00807) & -6.71672 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.08556 & (0.01378) & -6.2108 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & -0.0424 & (0.0042) & -10.10292 & 0.0 \\\\ \\\\ \n",
+      "\\hline \\\\ \n",
       "\\end{tabular} \n",
       "\n"
      ]
@@ -301,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -311,37 +324,35 @@
       "\\small \n",
       "\\begin{tabular}{lclc} \n",
       "\\hline \n",
-      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.212 \\\\ \n",
-      "\\textbf{No. Observations:} & 3662 & \\textbf{ AIC:} & -8220.8 \\\\ \n",
+      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.195 \\\\ \n",
+      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8552.5 \\\\ \n",
       "\\end{tabular} \n",
       "\n",
       "\\begin{tabular}{lcccc} \n",
       "\\hline \n",
-      "\\textbf{History 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
+      "\\textbf{Phase 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{(Intercept)} & -1.60081 & (0.10231) & -15.64598 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.15289 & (0.02648) & 5.77315 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 0.01008 & (0.00406) & 2.48672 & 0.01294 \\\\ \\\\ \n",
-      "\\textbf{Population} & 0.02063 & (0.00314) & 6.56085 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & 0.00153 & (0.00204) & 0.74757 & 0.45477 \\\\ \\\\ \n",
-      "\\textbf{Meals} & -0.0204 & (0.00304) & -6.71197 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.01853 & (0.00294) & 6.30586 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.01903 & (0.00275) & -6.9094 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 1A} & -0.01474 & (0.01868) & -0.78888 & 0.43023 \\\\ \\\\ \n",
-      "\\textbf{Zone 3} & -0.06577 & (0.00415) & -15.84827 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 6} & -0.05755 & (0.00794) & -7.2503 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 7} & -0.12654 & (0.01735) & -7.29541 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 9} & -0.03649 & (0.00444) & -8.22674 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Incumbency} & 0.03123 & (0.00658) & 4.74539 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#1} & -0.01258 & (0.01905) & -0.66039 & 0.50905 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#2} & 0.04529 & (0.01903) & 2.38033 & 0.01735 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#3} & 0.04226 & (0.01917) & 2.20468 & 0.02754 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#4} & 0.02117 & (0.01895) & 1.11723 & 0.26397 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#1} & 0.11524 & (0.01885) & 6.11484 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#2} & 0.02466 & (0.01866) & 1.32119 & 0.18652 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#3} & 0.0407 & (0.01863) & 2.18491 & 0.02896 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#4} & 0.02239 & (0.0181) & 1.23668 & 0.21628 \\\\ \\\\ \n",
-      "\\textbf{Variance} & 0.07829 &  & & \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -1.5375 & (0.09889) & -15.54688 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.1245 & (0.02614) & 4.76353 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 0.01666 & (0.00396) & 4.20662 & 3e-05 \\\\ \\\\ \n",
+      "\\textbf{Population} & 0.00376 & (0.00185) & 2.02919 & 0.04251 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & -0.00135 & (0.00199) & -0.67705 & 0.49842 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.01833 & (0.00287) & 6.38353 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.0219 & (0.00269) & -8.13833 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.06922 & (0.00404) & -17.12198 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.05885 & (0.00793) & -7.42203 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.09643 & (0.01352) & -7.13092 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & -0.04592 & (0.00415) & -11.05574 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Incumbency} & 0.02601 & (0.00554) & 4.69101 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#1} & -0.00736 & (0.01894) & -0.38842 & 0.69772 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#2} & 0.05713 & (0.01884) & 3.03269 & 0.00244 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#3} & 0.04689 & (0.01901) & 2.46737 & 0.01365 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#4} & 0.0253 & (0.01883) & 1.34353 & 0.17918 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#1} & 0.12466 & (0.01864) & 6.68701 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#2} & 0.02557 & (0.01843) & 1.38693 & 0.16554 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#3} & 0.04625 & (0.01844) & 2.50852 & 0.01217 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#4} & 0.03404 & (0.01791) & 1.90053 & 0.05744 \\\\ \\\\ \n",
+      "\\hline \\\\ \n",
       "\\end{tabular} \n",
       "\n"
      ]
@@ -361,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -371,47 +382,42 @@
       "\\small \n",
       "\\begin{tabular}{lclc} \n",
       "\\hline \n",
-      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.439 \\\\ \n",
-      "\\textbf{No. Observations:} & 3662 & \\textbf{ AIC:} & -8736.6 \\\\ \n",
+      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.41 \\\\ \n",
+      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -9004.1 \\\\ \n",
       "\\end{tabular} \n",
       "\n",
       "\\begin{tabular}{lcccc} \n",
       "\\hline \n",
-      "\\textbf{History 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
+      "\\textbf{Phase 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{Pr(hist. 1)} & 0.31832  & & & \\\\ \\\\ \n",
-      "\\textbf{(Intercept)} & -2.72641 & (0.05627) & -48.45392 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.3568 & (0.02066) & 17.26624 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 0.00264 & (0.00329) & 0.80283 & 0.42212 \\\\ \\\\ \n",
-      "\\textbf{Population} & -0.0018 & (0.00209) & -0.86055 & 0.38954 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & 0.00667 & (0.00175) & 3.81469 & 0.00014 \\\\ \\\\ \n",
-      "\\textbf{Meals} & -0.00428 & (0.00206) & -2.07911 & 0.03768 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.00272 & (0.00232) & 1.17654 & 0.23946 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.00458 & (0.00212) & -2.1602 & 0.03082 \\\\ \\\\ \n",
-      "\\textbf{Zone 1A} & -0.00484 & (0.01253) & -0.38591 & 0.69958 \\\\ \\\\ \n",
-      "\\textbf{Zone 3} & -0.18004 & (0.00345) & -52.13716 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 6} & -0.13708 & (0.00646) & -21.23006 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 7} & -0.23853 & (0.01147) & -20.78885 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 9} & -0.19797 & (0.00384) & -51.61474 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Variance} & 0.03447 &  & & \\\\ \\\\ \n",
+      "\\textbf{Pr(phase 1)} & 0.31328  & 0.25513 & & \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -2.72138 & (0.05916) & -46.00008 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.34896 & (0.02199) & 15.87006 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 0.00668 & (0.00349) & 1.91691 & 0.05532 \\\\ \\\\ \n",
+      "\\textbf{Population} & -0.00347 & (0.00168) & -2.06565 & 0.03893 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & 0.00327 & (0.00184) & 1.77861 & 0.07538 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.00408 & (0.00247) & 1.654 & 0.09821 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.00487 & (0.00225) & -2.1645 & 0.03049 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.17572 & (0.00362) & -48.55432 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.13892 & (0.00681) & -20.39945 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.2252 & (0.01094) & -20.57839 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & -0.19527 & (0.00385) & -50.7841 & 0.0 \\\\ \\\\ \n",
       "\\hline \n",
-      "\\textbf{History 2} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
+      "\\textbf{Phase 2} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{Pr(hist. 2)} & 0.68168  & & & \\\\ \\\\ \n",
-      "\\textbf{(Intercept)} & -2.14174 & (0.08361) & -25.61663 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.19338 & (0.03018) & 6.40793 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & -0.00929 & (0.00472) & -1.96956 & 0.04896 \\\\ \\\\ \n",
-      "\\textbf{Population} & 0.03934 & (0.00406) & 9.70019 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & 0.00099 & (0.00229) & 0.43343 & 0.66473 \\\\ \\\\ \n",
-      "\\textbf{Meals} & -0.03511 & (0.00394) & -8.92208 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.01842 & (0.00342) & 5.38549 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.01938 & (0.00329) & -5.8901 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 1A} & -0.04009 & (0.02406) & -1.66597 & 0.09581 \\\\ \\\\ \n",
-      "\\textbf{Zone 3} & -0.02195 & (0.00478) & -4.59088 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Zone 6} & -0.01693 & (0.00916) & -1.84902 & 0.06454 \\\\ \\\\ \n",
-      "\\textbf{Zone 7} & -0.01672 & (0.02267) & -0.73745 & 0.4609 \\\\ \\\\ \n",
-      "\\textbf{Zone 9} & 0.01588 & (0.00505) & 3.143 & 0.00169 \\\\ \\\\ \n",
-      "\\textbf{Variance} & 0.07646 &  & & \\\\ \\\\ \n",
+      "\\textbf{Pr(phase 2)} & 0.68672  & 0.25513 & & \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -2.22754 & (0.08084) & -27.55524 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.15383 & (0.03016) & 5.09963 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 4e-05 & (0.00459) & 0.00917 & 0.99269 \\\\ \\\\ \n",
+      "\\textbf{Population} & 0.00894 & (0.00207) & 4.32674 & 2e-05 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & -0.00198 & (0.00223) & -0.88743 & 0.3749 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.01877 & (0.00336) & 5.58808 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.02396 & (0.00321) & -7.45704 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.02656 & (0.00467) & -5.69045 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.01646 & (0.00927) & -1.77462 & 0.07604 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.01705 & (0.01631) & -1.04584 & 0.2957 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & 0.00479 & (0.00474) & 1.00937 & 0.31286 \\\\ \\\\ \n",
+      "\\hline \\\\ \n",
       "\\end{tabular} \n",
       "\n"
      ]
@@ -424,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8.86039146307833, 8.762589177157354, 6.13732050035835e-19, 1.4420111216904853e-18)\n"
+      "(7.690497444933137, 7.629614031792577, 1.8612577223820765e-14, 2.9688370983063555e-14)\n"
      ]
     }
    ],
@@ -466,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,6 +485,7 @@
     "    f.write('\\n\\\\hline')\n",
     "    f.write('\\n\\\\textbf{Test 1} & %s & %s \\\\\\\\'%(test1,p1))\n",
     "    f.write('\\n\\\\textbf{Test 2} & %s & %s \\\\\\\\'%(test2,p2))\n",
+    "    f.write('\\\\hline \\\\\\\\ \\n')   \n",
     "    f.write('\\n\\\\end{tabular}\\n')\n",
     "    f.close()\n",
     "\n",
