working on stuff

--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -84,7 +84,12 @@
     "\n",
     "reg1 = data.copy()[bid_key + lmilk + covariates + hist]\n",
     "reg1 = reg1.dropna()\n",
-    "reg1.to_csv('data/clean_milk1.csv')"
+    "reg1.to_csv('data/clean_milk1.csv')\n",
+    "\n",
+    "#also include win for summary stats\n",
+    "reg0 = data.copy()[bid_key + lmilk + covariates + hist + ['WIN']]\n",
+    "reg0 = reg0.dropna()\n",
+    "reg0.to_csv('data/clean_milk0.csv')"
    ]
   },
   {
@@ -107,10 +112,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   48.49</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sun, 26 May 2019</td> <th>  Prob (F-statistic):</th> <td>4.45e-163</td>\n",
+       "  <th>Date:</th>             <td>Tue, 28 May 2019</td> <th>  Prob (F-statistic):</th> <td>4.45e-163</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:33:33</td>     <th>  Log-Likelihood:    </th> <td>  4296.2</td> \n",
+       "  <th>Time:</th>                 <td>18:24:40</td>     <th>  Log-Likelihood:    </th> <td>  4296.2</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3823</td>      <th>  AIC:               </th> <td>  -8552.</td> \n",
@@ -213,8 +218,8 @@
        "Dep. Variable:                    LWW   R-squared:                       0.195\n",
        "Model:                            OLS   Adj. R-squared:                  0.191\n",
        "Method:                 Least Squares   F-statistic:                     48.49\n",
-       "Date:                Sun, 26 May 2019   Prob (F-statistic):          4.45e-163\n",
-       "Time:                        19:33:33   Log-Likelihood:                 4296.2\n",
+       "Date:                Tue, 28 May 2019   Prob (F-statistic):          4.45e-163\n",
+       "Time:                        18:24:40   Log-Likelihood:                 4296.2\n",
        "No. Observations:                3823   AIC:                            -8552.\n",
        "Df Residuals:                    3803   BIC:                            -8427.\n",
        "Df Model:                          19                                         \n",
