added some new stuff

--- a/analytic_solution.ipynb
+++ b/analytic_solution.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,31 +193,30 @@
     "    \n",
     "    #print output\n",
     "    f = open(fname, \"r\")\n",
-    "    print f.read()\n",
+    "    print(f.read())\n",
     "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index([u'Unnamed: 0', u'YEAR', u'MONTH', u'DAY', u'SYSTEM', u'FMOZONE',\n",
-      "       u'VENDOR', u'COUNTY', u'LWW', u'LFMO', u'LGAS', u'LPOPUL', u'LQWW',\n",
-      "       u'COOLER', u'ESC', u'3', u'6', u'7', u'9', u'INC', u'LWW_min1',\n",
-      "       u'LWW_min2', u'LWW_min3', u'LWW_min4', u'LWW_max1', u'LWW_max2',\n",
-      "       u'LWW_max3', u'LWW_max4'],\n",
+      "Index(['Unnamed: 0', 'YEAR', 'MONTH', 'DAY', 'SYSTEM', 'FMOZONE', 'VENDOR',\n",
+      "       'COUNTY', 'LWW', 'LFMO', 'LGAS', 'LPOPUL', 'LQWW', 'COOLER', 'ESC', '3',\n",
+      "       '6', '7', '9', 'INC', 'LWW_min1', 'LWW_min2', 'LWW_min3', 'LWW_min4',\n",
+      "       'LWW_max1', 'LWW_max2', 'LWW_max3', 'LWW_max4'],\n",
       "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "reg1 = pd.read_csv('data/clean_milk1.csv')\n",
-    "print reg1.columns\n",
+    "print(reg1.columns)\n",
     "\n",
     "#variables names\n",
     "lmilk = ['LWW']\n",
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +258,13 @@
     "nice_lags = [l+str(i) for l in ['Min. lag \\#','Max. lag \\#'] for i in range(1,1+lags)]\n",
     "nice_lags = ['Incumbency'] + nice_lags\n",
     "\n",
-    "print len(nice_cov)\n",
-    "print len(covariates)"
+    "print(len(nice_cov))\n",
+    "print(len(covariates))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -275,25 +274,25 @@
       "\\small \n",
       "\\begin{tabular}{lclc} \n",
       "\\hline \n",
-      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.158 \\\\ \n",
-      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8399.7 \\\\ \n",
+      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.157 \\\\ \n",
+      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8394.5 \\\\ \n",
       "\\end{tabular} \n",
       "\n",
       "\\begin{tabular}{lcccc} \n",
       "\\hline \n",
       "\\textbf{Phase 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{(Intercept)} & -2.32583 & (0.07014) & -33.15816 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.18546 & (0.02613) & 7.09658 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 0.01672 & (0.00401) & 4.16971 & 3e-05 \\\\ \\\\ \n",
-      "\\textbf{Population} & 0.00709 & (0.00184) & 3.84354 & 0.00012 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & -0.00354 & (0.002) & -1.77142 & 0.07657 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.01847 & (0.00292) & 6.32972 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.0229 & (0.00274) & -8.34616 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Waco} & -0.06712 & (0.00412) & -16.30108 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{St. Angelo} & -0.05418 & (0.00807) & -6.71672 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Austin} & -0.08556 & (0.01378) & -6.2108 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{San Antonio} & -0.0424 & (0.0042) & -10.10292 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -2.32719 & (0.07019) & -33.15553 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.18609 & (0.02616) & 7.11463 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 0.01513 & (0.00405) & 3.73775 & 0.00019 \\\\ \\\\ \n",
+      "\\textbf{Population} & 0.00757 & (0.00183) & 4.1275 & 4e-05 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & -0.00353 & (0.002) & -1.76735 & 0.07725 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.01853 & (0.00292) & 6.34468 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.02292 & (0.00276) & -8.31287 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.06642 & (0.00411) & -16.15964 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.04254 & (0.01185) & -3.59134 & 0.00033 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.08653 & (0.01378) & -6.27727 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & -0.04479 & (0.00399) & -11.21354 & 0.0 \\\\ \\\\ \n",
       "\\hline \\\\ \n",
       "\\end{tabular} \n",
       "\n"
@@ -303,7 +302,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:41: RuntimeWarning: divide by zero encountered in divide\n"
+      "/home/erichschulman/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:41: RuntimeWarning: divide by zero encountered in true_divide\n"
      ]
     }
    ],
@@ -314,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -324,34 +323,34 @@
       "\\small \n",
       "\\begin{tabular}{lclc} \n",
       "\\hline \n",
-      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.195 \\\\ \n",
-      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8552.5 \\\\ \n",
+      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.194 \\\\ \n",
+      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8547.5 \\\\ \n",
       "\\end{tabular} \n",
       "\n",
       "\\begin{tabular}{lcccc} \n",
       "\\hline \n",
       "\\textbf{Phase 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{(Intercept)} & -1.5375 & (0.09889) & -15.54688 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.1245 & (0.02614) & 4.76353 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 0.01666 & (0.00396) & 4.20662 & 3e-05 \\\\ \\\\ \n",
-      "\\textbf{Population} & 0.00376 & (0.00185) & 2.02919 & 0.04251 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & -0.00135 & (0.00199) & -0.67705 & 0.49842 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.01833 & (0.00287) & 6.38353 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.0219 & (0.00269) & -8.13833 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Waco} & -0.06922 & (0.00404) & -17.12198 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{St. Angelo} & -0.05885 & (0.00793) & -7.42203 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Austin} & -0.09643 & (0.01352) & -7.13092 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{San Antonio} & -0.04592 & (0.00415) & -11.05574 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Incumbency} & 0.02601 & (0.00554) & 4.69101 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#1} & -0.00736 & (0.01894) & -0.38842 & 0.69772 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#2} & 0.05713 & (0.01884) & 3.03269 & 0.00244 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#3} & 0.04689 & (0.01901) & 2.46737 & 0.01365 \\\\ \\\\ \n",
-      "\\textbf{Min. lag \\#4} & 0.0253 & (0.01883) & 1.34353 & 0.17918 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#1} & 0.12466 & (0.01864) & 6.68701 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#2} & 0.02557 & (0.01843) & 1.38693 & 0.16554 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#3} & 0.04625 & (0.01844) & 2.50852 & 0.01217 \\\\ \\\\ \n",
-      "\\textbf{Max. lag \\#4} & 0.03404 & (0.01791) & 1.90053 & 0.05744 \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -1.53342 & (0.09904) & -15.48349 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.12422 & (0.02617) & 4.74645 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 0.01551 & (0.004) & 3.87531 & 0.00011 \\\\ \\\\ \n",
+      "\\textbf{Population} & 0.00424 & (0.00184) & 2.30482 & 0.02123 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & -0.00135 & (0.00199) & -0.67607 & 0.49904 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.01837 & (0.00287) & 6.39267 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.02192 & (0.0027) & -8.10935 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.06851 & (0.00404) & -16.97702 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.0469 & (0.01169) & -4.01353 & 6e-05 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.09748 & (0.01353) & -7.20557 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & -0.04851 & (0.00396) & -12.24714 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Incumbency} & 0.02594 & (0.00557) & 4.66043 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#1} & -0.00631 & (0.01895) & -0.3329 & 0.73923 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#2} & 0.05637 & (0.01886) & 2.98922 & 0.00281 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#3} & 0.0477 & (0.01903) & 2.50703 & 0.01222 \\\\ \\\\ \n",
+      "\\textbf{Min. lag \\#4} & 0.02608 & (0.01886) & 1.38277 & 0.16682 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#1} & 0.12297 & (0.01866) & 6.59199 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#2} & 0.02651 & (0.01847) & 1.43526 & 0.1513 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#3} & 0.04643 & (0.01845) & 2.51598 & 0.01191 \\\\ \\\\ \n",
+      "\\textbf{Max. lag \\#4} & 0.03507 & (0.01792) & 1.95675 & 0.05045 \\\\ \\\\ \n",
       "\\hline \\\\ \n",
       "\\end{tabular} \n",
       "\n"
@@ -361,7 +360,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:41: RuntimeWarning: divide by zero encountered in divide\n"
+      "/home/erichschulman/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:41: RuntimeWarning: divide by zero encountered in true_divide\n"
      ]
     }
    ],
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -382,41 +381,41 @@
       "\\small \n",
       "\\begin{tabular}{lclc} \n",
       "\\hline \n",
-      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.41 \\\\ \n",
-      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -9004.1 \\\\ \n",
+      "\\textbf{Dep. Variable:} & Bids (log-log) & \\textbf{  R-squared: } &  0.411 \\\\ \n",
+      "\\textbf{No. Observations:} & 3823 & \\textbf{ AIC:} & -8992.4 \\\\ \n",
       "\\end{tabular} \n",
       "\n",
       "\\begin{tabular}{lcccc} \n",
       "\\hline \n",
       "\\textbf{Phase 1} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{Pr(phase 1)} & 0.31328  & 0.25513 & & \\\\ \\\\ \n",
-      "\\textbf{(Intercept)} & -2.72138 & (0.05916) & -46.00008 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.34896 & (0.02199) & 15.87006 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 0.00668 & (0.00349) & 1.91691 & 0.05532 \\\\ \\\\ \n",
-      "\\textbf{Population} & -0.00347 & (0.00168) & -2.06565 & 0.03893 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & 0.00327 & (0.00184) & 1.77861 & 0.07538 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.00408 & (0.00247) & 1.654 & 0.09821 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.00487 & (0.00225) & -2.1645 & 0.03049 \\\\ \\\\ \n",
-      "\\textbf{Waco} & -0.17572 & (0.00362) & -48.55432 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{St. Angelo} & -0.13892 & (0.00681) & -20.39945 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Austin} & -0.2252 & (0.01094) & -20.57839 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{San Antonio} & -0.19527 & (0.00385) & -50.7841 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Pr(phase 1)} & 0.32055  & 0.25601 & & \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -2.7301 & (0.05957) & -45.82928 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.35829 & (0.02213) & 16.19316 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & 0.00427 & (0.00357) & 1.19809 & 0.23096 \\\\ \\\\ \n",
+      "\\textbf{Population} & -0.00257 & (0.0017) & -1.5115 & 0.13074 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & 0.00172 & (0.00185) & 0.92942 & 0.35273 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.00677 & (0.00249) & 2.71818 & 0.00659 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.00587 & (0.00227) & -2.58136 & 0.00988 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.17445 & (0.00366) & -47.71652 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.07934 & (0.01022) & -7.76645 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.221 & (0.01114) & -19.83021 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & -0.18915 & (0.00362) & -52.22881 & 0.0 \\\\ \\\\ \n",
       "\\hline \n",
       "\\textbf{Phase 2} & \\textbf{Est.} & \\textbf{Std. Err.} &\\textbf{t} & \\textbf{P $>$ $|$ t $|$} \\\\ \n",
       "\\hline \\\\ \n",
-      "\\textbf{Pr(phase 2)} & 0.68672  & 0.25513 & & \\\\ \\\\ \n",
-      "\\textbf{(Intercept)} & -2.22754 & (0.08084) & -27.55524 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Raw milk} & 0.15383 & (0.03016) & 5.09963 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Gas} & 4e-05 & (0.00459) & 0.00917 & 0.99269 \\\\ \\\\ \n",
-      "\\textbf{Population} & 0.00894 & (0.00207) & 4.32674 & 2e-05 \\\\ \\\\ \n",
-      "\\textbf{Quantity} & -0.00198 & (0.00223) & -0.88743 & 0.3749 \\\\ \\\\ \n",
-      "\\textbf{Cooler} & 0.01877 & (0.00336) & 5.58808 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Escalated} & -0.02396 & (0.00321) & -7.45704 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{Waco} & -0.02656 & (0.00467) & -5.69045 & 0.0 \\\\ \\\\ \n",
-      "\\textbf{St. Angelo} & -0.01646 & (0.00927) & -1.77462 & 0.07604 \\\\ \\\\ \n",
-      "\\textbf{Austin} & -0.01705 & (0.01631) & -1.04584 & 0.2957 \\\\ \\\\ \n",
-      "\\textbf{San Antonio} & 0.00479 & (0.00474) & 1.00937 & 0.31286 \\\\ \\\\ \n",
+      "\\textbf{Pr(phase 2)} & 0.67945  & 0.25601 & & \\\\ \\\\ \n",
+      "\\textbf{(Intercept)} & -2.24976 & (0.08144) & -27.62469 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Raw milk} & 0.16265 & (0.03041) & 5.34803 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Gas} & -0.00182 & (0.00465) & -0.3914 & 0.69552 \\\\ \\\\ \n",
+      "\\textbf{Population} & 0.0097 & (0.00205) & 4.72358 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Quantity} & -0.00222 & (0.00224) & -0.98913 & 0.32266 \\\\ \\\\ \n",
+      "\\textbf{Cooler} & 0.01851 & (0.00338) & 5.48464 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Escalated} & -0.02307 & (0.00325) & -7.09146 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{Waco} & -0.02475 & (0.00468) & -5.29076 & 0.0 \\\\ \\\\ \n",
+      "\\textbf{St. Angelo} & -0.03042 & (0.01362) & -2.23387 & 0.02555 \\\\ \\\\ \n",
+      "\\textbf{Austin} & -0.01724 & (0.01634) & -1.05536 & 0.29133 \\\\ \\\\ \n",
+      "\\textbf{San Antonio} & 0.00369 & (0.00456) & 0.80937 & 0.41835 \\\\ \\\\ \n",
       "\\hline \\\\ \n",
       "\\end{tabular} \n",
       "\n"
@@ -430,14 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7.690497444933137, 7.629614031792577, 1.8612577223820765e-14, 2.9688370983063555e-14)\n"
+      "(7.6243720582619074, 7.56500250531668, 3.084839564039558e-14, 4.841818799677707e-14)\n"
      ]
     }
    ],
@@ -467,12 +466,12 @@
     "    \n",
     "    return test1, test2, p1, p2\n",
     "\n",
-    "print nonnested_test(est2,est1)"
+    "print(nonnested_test(est2,est1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,21 +508,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
